Patch should use originBranch #11544